fix(windows): kubernetes.node fix (overwrite=true)

--- a/kubernetes/defaults.yaml
+++ b/kubernetes/defaults.yaml
@@ -4,6 +4,7 @@
 kubernetes:
   div: '/'
   clean: false
+  overwrite: true   # for archive.extracted on windows
   formula: kubernetes
   supported:
     - server
