--- a/kitchen.yml
+++ b/kitchen.yml
@@ -300,3 +300,20 @@ suites:
     verifier:
       inspec_tests:
         - path: test/integration/arch
+  - name: script
+    provisioner:
+      state_top:
+        base:
+          '*':
+            # kubernetes.clean
+            - kubernetes.k3s
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - kubernetes
+      pillars_from_files:
+        kubernetes.sls: test/salt/pillar/script.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/script
