--- a/kubernetes/osfamilymap.yaml
+++ b/kubernetes/osfamilymap.yaml
@@ -94,7 +94,6 @@ Windows:
     operators: C:\\kubernetes\src
     tmp: C:\\temp\kubernetes
   client:
-    version: 1.19.0
     check: systeminfo
     aliases_file: C:\kubernetes\etc\aliases.sh
     pkg:
@@ -103,16 +102,15 @@ Windows:
       use_upstream: package
       binary:
         options: '--strip-components=2'   # windows
-        source_hash: '6ec32a8a62b69363a524c4f8db765ff4bd16ea7e5b0eb04aa5a667f8653eda18c357a97513d9e12f0ba1612516acb150deffb6e3608633c62b97a15b6efa7cc0'
-  server: {}
+        source_hash: '4c0a27dba1077aaee943e0eb7a787239dd697e1d968e78d1933c1e60b02d5d233d58541d5beec59807a4ffe3351d5152359e11da120bf64cacb3ee29fbc242e6'
+  server: {}   # none
   node:
-    version: 1.19.0
     config_file: C:\kubernetes\etc\node.ini
     pkg:
       use_upstream: archive
       archive:
         options: '--strip-components=3'   # windows
-        source_hash: '587651158c9999e64e06186ef2e65fe14d46ffdae28c5d8ee6261193bfe4967717f997ebe13857fa1893bbf492e1cc1f816bce86a94c6df9b7a0264848391397'  # noqa 204
+        source_hash: '9d4261af343cc330e6359582f80dbd6efb57d41f882747a94bbf47b4f93292d43dd19a86214d4944d268941622dfbc96847585e6fec15fddc4dbd93d17015fa8'  # noqa 204
 
   sigs:
     pkg:
@@ -132,16 +130,14 @@ Windows:
         config_file: C:\kubernetes\etc\minikube.ini
         environ_file: C:\kubernetes\etc\minkube.sh
         binary:
-          source_hash: '0317e6c338da23ccf0aba698668c6d919f22e1482340a09d1269220063937aeb'
+          source_hash: '36cfbbbe0736aef9c16f8e042943158c926f657d38b61cf1b0fa2a360944ca20'
       devspace:
         name: devspace
         suffix: exe
-        binary:
-          source_hash: '831d100b5ebf599a3c45ac552fa1a148d3c99efe174222678ba52a0536c0f7ab'
       octant:
         suffix: zip
         archive:
-          source_hash: '07f276d1f1396a634881598fd8cd6532ed25325048081defccdb54512b6037f4'
+          source_hash: '15bafbb6354257102c51478dda889eefa7676c60ea291b2756911a5fcb2e1f71'
           options: ''  # zipfile
       k3s:
         use_upstream: false   # no windows binary
@@ -165,7 +161,7 @@ Windows:
       cue:
         suffix: zip
         archive:
-          source_hash: '820b581e7285b78644d4bcfd1a0bd2c9f2153ddc4880c501a7423ab7992dc778'  # x86_64
+          source_hash: '936084adace91705b4e3720d3f54b3a6156d1e2d8662f5bbb1b79fe8afcb2dae'  # x86_64
           options: ''
       audit2rbac:
         archive:
@@ -214,7 +210,6 @@ MacOS:
         commands:
           - krew-darwin_amd64
 
-
   devtools:
     pkg:
       minikube:
@@ -222,11 +217,9 @@ MacOS:
         name: minikube               # homebrew
         use_upstream: binary
         binary:
-          source_hash: '7f6c6eeca19d6b16c9043cfc96a42408bbdec8ba90c01bd025249ca855a1362c'
+          source_hash: '1ef0ca8ce0aa43f2c7092af173742b597f7876a5e67ab829c5f266dbecdf9469'
       devspace:
         use_upstream: binary
-        binary:
-          source_hash: '831d100b5ebf599a3c45ac552fa1a148d3c99efe174222678ba52a0536c0f7ab'
       kudo:
         name: kudo-cli    # homebrew
         tapname: kudobuilder/tap
@@ -250,7 +243,7 @@ MacOS:
           source_hash: '4ae390ba702d57355d5fb9f2bba04c9b00ae39f740c59044c2d39cd6bfa0ab18'  # x86_64
       cue:
         archive:
-          source_hash: '659912f149bb1534c2e72baae31e3d4de108b292af3907f402d25fa101f80d98'  # x86_64
+          source_hash: '936084adace91705b4e3720d3f54b3a6156d1e2d8662f5bbb1b79fe8afcb2dae'  # x86_64
       stern:
         archive:
           source_hash: '7aea3b6691d47b3fb844dfc402905790665747c1e6c02c5cabdd41994533d7e9'  # x86_64
@@ -262,4 +255,4 @@ MacOS:
           source_hash: 'e89d9e7e6e68d7fdf135ab0912f57afda0fea07931ac443a367d35671f83d1b1'
       skaffold:
         binary:
-          source_hash: '271350426a34d8f3f0048c902e4d543ea994eca1a91cb881f8d7ebd9176de1a3'
+          source_hash: '1e9ad5ed0ba3b277c582dbdb7e13c3307ff1dc21887bf18d4c5aece486e0518c'
